- Added fixes so that the grid toolbar doesnt jump on select/deleselect all - changed text comments in toolbar settings - renamed non working example to remove % sign - fixed link to CAP page, removed old cap examples

--- a/sass/controls/_datagrid.scss
+++ b/sass/controls/_datagrid.scss
@@ -505,7 +505,7 @@ $datagrid-short-row-height: 30px;
       input {
         border: 1px solid transparent;
         outline: none;
-        padding: 9px 0 8px !important;
+        padding: 9px 0 8px;
         width: 100%;
 
         &:focus {
