--- a/sass/controls/_searchfield.scss
+++ b/sass/controls/_searchfield.scss
@@ -278,14 +278,6 @@
 
 }
 
-.is-mac.is-firefox .searchfield {
-  padding: 9px 10px 8px 34px;
-}
-
-.is-mac.is-firefox .toolbar-searchfield-wrapper .searchfield {
-  padding: 9px 10px 8px 34px;
-}
-
 .inline.searchfield-wrapper {
   > .icon:not(.icon-error) {
     top: 30px;
